ecmascript/parser/tests/typescript-errors/tsc/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorInvalidOperations/input.ts.stderr
error: Expected an expression
  --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorInvalidOperations/input.ts:11:16
   |
11 | var BOOLEAN3 =!;
   |                ^

